force-app/main/default/objects/Shelter_Stay__c/Shelter_Stay__c.object-meta.xml
<CustomObject>
    <description>One record per survivor's stay in the SFTS shelter. ADR-009: tracked as stays, not as named beds. Current occupancy = COUNT(Status='Active' AND Check_Out_DateTime IS NULL).</description>
    <label>Shelter Stay</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Stay Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shelter Stays</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>