force-app/main/default/objects/Shelter_Stay__c/fields/Check_In_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Check_In_DateTime__c</fullName>
    <description>When the survivor checked into the shelter. Required.</description>
    <label>Check-In Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>