force-app/main/default/objects/Shelter_Stay__c/fields/Check_Out_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_DateTime__c</fullName>
    <description>When the survivor checked out of the shelter. Leave blank if the survivor is still in shelter. Current occupancy is derived from Check_Out_DateTime IS NULL.</description>
    <label>Check-Out Date/Time</label>
    <type>DateTime</type>
</CustomField>