force-app/main/default/objects/Shelter_Stay__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The survivor (primary occupant) of this stay. Required. Deleting a Contact with stays will be prevented to preserve audit trail.</description>
    <label>Survivor (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shelter Stays</relationshipLabel>
    <relationshipName>Shelter_Stays</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>