force-app/main/default/objects/Shelter_Stay__c/fields/Exit_Destination__c.field-meta.xml
<CustomField>
    <fullName>Exit_Destination__c</fullName>
    <description>Where the survivor went upon exiting. VOCA-required for grant reporting. Required when Status changes to Exited.</description>
    <label>Exit Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Own Apartment or House</fullName><default>false</default><label>Own Apartment or House</label></value>
            <value><fullName>Family</fullName><default>false</default><label>Staying with Family</label></value>
            <value><fullName>Friends</fullName><default>false</default><label>Staying with Friends</label></value>
            <value><fullName>Transitional Housing</fullName><default>false</default><label>Transitional Housing Program</label></value>
            <value><fullName>Hotel or Motel</fullName><default>false</default><label>Hotel / Motel</label></value>
            <value><fullName>Other Shelter</fullName><default>false</default><label>Another Shelter</label></value>
            <value><fullName>Returned to Abuser</fullName><default>false</default><label>Returned to Abuser</label></value>
            <value><fullName>Homeless</fullName><default>false</default><label>Homeless / Street</label></value>
            <value><fullName>Hospital or Treatment</fullName><default>false</default><label>Hospital or Treatment Facility</label></value>
            <value><fullName>Jail or Prison</fullName><default>false</default><label>Jail or Prison</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>