force-app/main/default/objects/Shelter_Stay__c/fields/Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exit_Reason__c</fullName>
    <description>Why the survivor left. Useful for shelter operations review and identifying improvements.</description>
    <label>Exit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Goals Met</fullName><default>false</default><label>Survivor Met Their Goals</label></value>
            <value><fullName>Rules Violation</fullName><default>false</default><label>Rules Violation / Asked to Leave</label></value>
            <value><fullName>Max Stay Reached</fullName><default>false</default><label>Maximum Stay Reached</label></value>
            <value><fullName>Voluntary Early Exit</fullName><default>false</default><label>Survivor Chose to Leave Early</label></value>
            <value><fullName>Medical or Hospital</fullName><default>false</default><label>Medical / Hospital Need</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>