force-app/main/default/objects/Shelter_Stay__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The caseman__Intake__c record that authorized this stay. Optional — walk-ins may not have a prior Intake.</description>
    <label>Originating Intake</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Shelter Stays</relationshipLabel>
    <relationshipName>Shelter_Stays</relationshipName>
    <type>Lookup</type>
</CustomField>