force-app/main/default/objects/Shelter_Stay__c/fields/Length_of_Stay_Days__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay_Days__c</fullName>
    <description>Length of stay in days. For active stays (no Check_Out yet), counts from Check_In to today.</description>
    <formula>IF(
  ISBLANK(Check_Out_DateTime__c),
  FLOOR(NOW() - Check_In_DateTime__c),
  FLOOR(Check_Out_DateTime__c - Check_In_DateTime__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Stay (days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>