force-app/main/default/objects/Shelter_Stay__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Internal notes about this stay (accommodations, medical needs, behaviors of concern, etc.). NEVER include the survivor's external whereabouts here if she has requested address suppression.</description>
    <label>Stay Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>