force-app/main/default/objects/Shelter_Stay__c/fields/Number_of_Adults__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Adults__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Adults (18+) in this stay, INCLUDING the primary survivor. Matches the website intake "adults including you" field.</description>
    <label>Number of Adults</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>