force-app/main/default/objects/Shelter_Stay__c/fields/Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Children (under 18) accompanying the survivor in this stay. VOCA reportable.</description>
    <label>Number of Children</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>