force-app/main/default/objects/Shelter_Stay__c/fields/Pets__c.field-meta.xml
<CustomField>
    <fullName>Pets__c</fullName>
    <description>Whether the survivor brought pets. Important for both shelter accommodation and the SFTS "keep families together" pets policy. Matches website intake form field.</description>
    <label>Pets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Dog</fullName><default>false</default><label>Dog(s)</label></value>
            <value><fullName>Cat</fullName><default>false</default><label>Cat(s)</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>