force-app/main/default/objects/Shelter_Stay__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of this stay. Active = currently in shelter. Exited = checked out normally. Transferred = moved to another facility. No Show = scheduled but never arrived.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Exited</fullName><default>false</default><label>Exited</label></value>
            <value><fullName>Transferred</fullName><default>false</default><label>Transferred</label></value>
            <value><fullName>No Show</fullName><default>false</default><label>No Show</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>