force-app/main/default/objects/Shelter_Stay__c/validationRules/Active_Stay_No_Check_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Stay_No_Check_Out</fullName>
    <active>true</active>
    <description>If Status is Active, Check_Out_DateTime must be blank. To record check-out, change Status to Exited or Transferred (with Exit_Destination).</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Active"),
  NOT(ISBLANK(Check_Out_DateTime__c))
)</errorConditionFormula>
    <errorDisplayField>Check_Out_DateTime__c</errorDisplayField>
    <errorMessage>An "Active" shelter stay cannot have a Check-Out Date/Time. To record check-out, change Status to "Exited" (and add Exit Destination) or "Transferred".</errorMessage>
</ValidationRule>