force-app/main/default/objects/Shelter_Stay__c/validationRules/Check_In_Not_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_In_Not_In_Future</fullName>
    <active>true</active>
    <description>Check-in date/time must not be in the future. Stays are recorded after the survivor arrives, not as future reservations.</description>
    <errorConditionFormula>Check_In_DateTime__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Check_In_DateTime__c</errorDisplayField>
    <errorMessage>Check-In Date/Time cannot be in the future. Record the stay after the survivor arrives.</errorMessage>
</ValidationRule>