force-app/main/default/objects/Shelter_Stay__c/validationRules/Exit_Destination_Required_When_Exited.validationRule-meta.xml
<ValidationRule>
    <fullName>Exit_Destination_Required_When_Exited</fullName>
    <active>true</active>
    <description>Cannot set Status to Exited without recording Exit_Destination AND Check_Out_DateTime. Required for VOCA reporting integrity.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Exited"),
  OR(
    ISBLANK(TEXT(Exit_Destination__c)),
    ISBLANK(Check_Out_DateTime__c)
  )
)</errorConditionFormula>
    <errorMessage>To mark this stay as Exited, you must record both an Exit Destination and a Check-Out Date/Time.</errorMessage>
</ValidationRule>