force-app/main/default/objects/Shelter_Stay__c/listViews/Currently_In_Shelter.listView-meta.xml
<ListView>
    <fullName>Currently_In_Shelter</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Check_In_DateTime__c</columns>
    <columns>Length_of_Stay_Days__c</columns>
    <columns>Number_of_Adults__c</columns>
    <columns>Number_of_Children__c</columns>
    <columns>Pets__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Check_Out_DateTime__c</field>
        <operation>equals</operation>
    </filters>
    <label>Currently In Shelter</label>
</ListView>