force-app/main/default/objects/Shelter_Stay__c/listViews/Exited_This_Month.listView-meta.xml
<ListView>
    <fullName>Exited_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Check_In_DateTime__c</columns>
    <columns>Check_Out_DateTime__c</columns>
    <columns>Length_of_Stay_Days__c</columns>
    <columns>Exit_Destination__c</columns>
    <columns>Exit_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Check_Out_DateTime__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Exited This Month</label>
</ListView>